fix menu z-index

--- a/broccoli/BroccoliMvc/Content/Site.css
+++ b/broccoli/BroccoliMvc/Content/Site.css
@@ -784,7 +784,8 @@ hr {
 	padding: 0 20px;
 	border-radius: 3px;
 	box-shadow: inset 0 1px 1px rgba(255,255,255,.5), inset 0 -1px 0 rgba(0,0,0,.15), 0 1px 3px rgba(0,0,0,.15);
-	background: #ccc; 
+	background: #ccc;
+    z-index: 99;
 }
 
 #menu, #menu ul {
